--- a/_posts/2025-02-02-community_iftar_2025_03_11.md
+++ b/_posts/2025-02-02-community_iftar_2025_03_11.md
@@ -13,7 +13,7 @@ tags:
 
 <div class="button-container">
     <div class=button>
-    <a href="bit.ly/orlandoiftar" target="_blank">RSVP</a>
+    <a href="https://givebutter.com/ixCKpr" target="_blank">RSVP</a>
     </div>
 </div>
 
