--- a/_posts/2025-05-14-dabka_may.md
+++ b/_posts/2025-05-14-dabka_may.md
@@ -3,7 +3,7 @@ title: Dabka 5/24
 date: 2025-05-14
 event-date: 2025-05-24
 event-time: 12:00 PM
-event-location: Knowledge For Living
+event-location:
 layout: post-event
 author: 
 cover_image: "/assets/images/2025-05-14-dabka_may/1.jpg"
